# opticalflow

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.cudaopencv4contrib.amd64  Dockerfile.opencv4contrib.amd64  README.md  benchAll.sh  benchAllKitti.sh  benchAllSintel.sh  buildDocker.sh
data/: first_image.txt  second_image.txt
deepflow/: CMakeLists.txt  Dockerfile.amd64
deepflow/scripts/: bench.sh
deepflow/src/: deepflow.cpp
dense-inverse-search/: CMakeLists.txt  Dockerfile.amd64
dense-inverse-search/scripts/: bench.sh
dense-inverse-search/src/: dense-inverse-search.cpp  dis.cpp
dualtvl1/: CMakeLists.txt  Dockerfile.amd64
dualtvl1/scripts/: bench.sh
dualtvl1/src/: dualtvl1.cpp
farneback/: CMakeLists.txt  Dockerfile.amd64
farneback/scripts/: bench.sh
farneback/src/: farneback.cpp
flow-code/: color_flow  colortest
flownet2/: Dockerfile  Dockerfile.amd64
flownet2/scripts/: bench.sh
lucas-kanade/: CMakeLists.txt  Dockerfile.amd64
lucas-kanade/scripts/: bench.sh
lucas-kanade/src/: lucaskanade.cpp  opendlv-standard-message-set-v0.9.6.odvd
pcaflow/: CMakeLists.txt  Dockerfile.amd64
pcaflow/scripts/: bench.sh
pcaflow/src/: pcaflow.cpp
rt-kernel/: .ubuntukernelconfig  Dockerfile.rtkernel.amd64
simpleflow/: CMakeLists.txt  Dockerfile.amd64
simpleflow/scripts/: bench.sh
simpleflow/src/: simpleflow.cpp
src/: main.cpp  objectivefunction.cpp  objectivefunction.hpp  opticalflow.cpp  opticalflow.hpp  pso.cpp  pso.hpp  videostream.cpp  videostream.hpp
